feat : initial commitsv

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
 URL_MONGO=mongodb://localhost//api-adc
 
-DATABSE_URL=mongodb+srv://root:jeferson123@cluster0.meqevhf.mongodb.net/Cluster0?retryWrites=true&w=majority&appName=Cluster0
+DATABSE_URL=mongodb+srv://root:jeferson123@cluster0.meqevhf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
